@@ -1,0 +1,32 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<project>
+  <parent>
+    <artifactId>spring-osgi</artifactId>
+    <groupId>org.springframework.osgi</groupId>
+    <version>1.0-rc2-SNAPSHOT</version>
+  </parent>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.springframework.osgi</groupId>
+  <artifactId>spring-osgi-integration-tests-module</artifactId>
+  <packaging>pom</packaging>
+  <name>Spring OSGi integration tests module</name>
+  <url>http://www.springframework.org/osgi</url>
+  
+  <modules>
+    <module>bundles</module>
+    <module>tests</module>
+  </modules>
+  
+  <profiles>
+    <profile>
+      <id>jdk-1.5+</id>
+        <activation>
+          <jdk>!1.4</jdk>
+        </activation>
+        <modules>
+          <module>tests-tiger</module>
+        </modules>
+    </profile>
+  </profiles>
+
+</project>
